--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
 
-<form>
-  <input type='text' />
+<form action='/api/weather' method='post' >
+  <input type='text' name='street'/>
   <input type='submit' />
 </form>
