replace api weather controller with weather controller

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Check the weather</h1>
+<p>Enter your address for your forecast!</p>
 
-<form action='/api/weather' method='post' >
+<form action='/weather' method='post' >
   <input type='text' name='street'/>
   <input type='submit' />
 </form>
