--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+input {
+  padding: 12px;
+  border:none;
+  box-shadow: 1px 1px lightgray;
+  margin: 4px;
+  font-size: 12px;
+}
+
+input[type=text] {
+  width: 250px;
+}
