--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Check the weather</h1>
-<p>Enter your address for your forecast!</p>
+<p>Enter your address (with a zip code) for your forecast!</p>
 
 <form action='/weather' method='post' >
   <input type='text' name='street'/>
